--- a/css/styles.css
+++ b/css/styles.css
@@ -40,9 +40,13 @@ header {
     float: left;
     text-align: center;
   }
+
   ul {
     list-style: none;
     margin: 0px;
     padding: 0px;
 }
 
+body {
+    margin: 0px;
+}
