--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 header {
-    background-color: #465e94;
+    background-color: #c43c3c;
     height: 15vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #efc67e;
-    text-shadow: 5px 5px 5px #af6793;
+    border-bottom: 5px solid #000000;
+}
+
+.header-logo {
+    position: absolute;
+    top: 0.5vh;
+    left: 1.5vw;
 }
 
 .nav-list {
@@ -15,13 +20,12 @@ header {
     list-style-type: none;
     border: 0px;
     margin: 10px;
-    float: right;
+   
   }
   
   .nav-item {
-    color: #c5ec86;;
-    margin: 5px;
-    
+    color: #c5ec86;
+    margin: 50px;
   }
   
   .nav-link {
@@ -36,16 +40,31 @@ header {
     text-shadow: 5px 5px 5px #000000;
   }
 
-  li {
-    float: left;
-    text-align: center;
+  .cancer-slug {
+    position: absolute;
+    top: 0.5vh;
+    right: 10vw;
   }
 
-  ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
+  main {
+    background: 
+    linear-gradient(
+    to top right,
+    #c43c3c,
+    #c43c3c 20%,
+    #000000 20%, 
+    #000000 40%,
+    #c43c3c 40%,
+    #c43c3c 60%,
+    #000000 60%,
+    #000000 80%,
+    #c43c3c 80%);
+    
+    text-align: center;
+    width: 100%;
+    min-height:100vh;
+
+  }
 
 body {
     margin: 0px;
