--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,36 @@ text-shadow: -1px 0 #E9FA00, 0 1px #E9FA00, 1px 0 #E9FA00, 0 -1px #E9FA00;
 
 
 h1 {
+  font-family: shlop, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 55px;
   border: 5px solid #00000000;
   color: #782E8C;
   text-shadow: -1px 0 #E9FA00, 0 1px #E9FA00, 1px 0 #E9FA00, 0 -1px #E9FA00;
   margin: 0px;
+}
+
+h2 {
+  font-size: 40px;
+  font-family: ccmonstermash, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h3 {
+  font-size:30px;
+  font-family: totally-gothic, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+p {
+  font-family: bradley-djr, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 25px;
+  text-shadow: #E9FA00  0 -2px;
 }
 
   /* Nav */
