--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ p {
   font-family: bradley-djr, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 2vw;
+  font-size: 2vh;
   text-shadow: #E9FA00  0 -2px;
 }
 
