--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,8 @@ p {
   font-family: bradley-djr, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 3vh;
-  text-shadow: #E9FA00  0 -2px;
+  font-size: 2.8vh;
+  text-shadow: #f2f0f3  0 -1px;
 }
 
   /* Nav */
