--- a/css/styles.css
+++ b/css/styles.css
@@ -79,11 +79,12 @@ h3 {
 }
 
 p {
+  color: #E9FA00;
   font-family: bradley-djr, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 2.8vh;
-  text-shadow: #f2f0f3  0 -1px;
+  font-size: 2.5vh;
+  text-shadow: #000000  0 -2px;
 }
 
   /* Nav */
