--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,8 @@ footer {
 }
 
 .footer-text {
-color: #782E8C;
-text-shadow: -1px 0 #E9FA00, 0 1px #E9FA00, 1px 0 #E9FA00, 0 -1px #E9FA00;
+color: #E9FA00;
+
 }
 
 
