--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ h2 {
 }
 
 h3 {
-  font-size:3.5vw;
+  font-size:6vw;
   font-family: totally-gothic, sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -106,17 +106,22 @@ header {
     max-width: 10vw;
 }
 
+.heading-text {
+  margin-top: 35px;
+  font-size: 4vw;
+}
+
 .nav-list {
     justify-content: right;
     display: flex;
     flex-direction: row;
     list-style-type: none;
     border: 0px;
-    margin: 10px;
+    margin: 0px;
   }
   
   .nav-item {
-    margin: 25px;
+    margin: 20px;
   }
   
   .nav-link {
